# eukan

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
docker/: Dockerfile
eukan/: exceptions.py  settings.py
eukan/annotation/: augustus.py  combinr_consensus.py  consensus.py  evidence.py  evm.py  genemark.py  pipeline.py
eukan/assembly/: __init__.py  align_hints.py  bam_diagnostic.py  bam_introns.py  bam_utils.py  combinr.py  defuse.py  jaccard.py  junction_rescue.py  max_intron.py  minimap2.py  pasa.py  pipeline.py  polya.py  rnaspades.py  segemehl.py  sl_acceptors.py  sl_cut.py  sl_depletion.py  star.py  strand_correction.py  stringtie.py  tracks.py  trinity.py
eukan/cli/: _framework.py  annotate.py  assemble.py  check.py  db_fetch.py  func_annot.py  gff3toseq.py  mask_repeats.py  prep_submission.py  status.py
eukan/compare/: format.py  models.py
eukan/data/: tools.toml
eukan/functional/: kofam.py  pipeline.py  search.py
eukan/gff/: concordance.py  io.py
eukan/infra/: artifacts.py  concurrency.py  conda_env.py  environ.py  genetic_code.py  genome.py  health.py  manifest.py  pipeline.py  runner.py  steps.py  tools_registry.py
eukan/repeats/: masker.py  modeler.py  pipeline.py
eukan/submission/: cleanup.py  pipeline.py
scripts/: fix-trinity-avx2.sh  install-extras.sh  refresh-combinr-shas.py
tests/: run_pipeline.py  softclip_experiment.py  test_align_hints_sj.py  test_artifacts.py  test_bam_diagnostic.py  test_bam_introns.py  test_cli_errors.py  test_combinr.py  test_combinr_consensus.py  test_consensus.py  test_defuse.py  test_environ.py  test_evidence.py  test_evm_inputs.py  test_functional_pipeline.py  test_genemark.py  test_genome.py  test_health.py  test_jaccard.py  test_manifest.py  test_map_transcripts_minimap2.py  test_map_transcripts_star.py  test_max_intron.py  test_orchestrator.py  test_polya.py  test_prep_submission.py  test_rnaspades.py  test_runner.py  test_segemehl_sj.py  test_segemehl_transcripts.py  test_settings.py  test_sl_acceptors.py  test_sl_cut.py  test_sl_depletion.py  test_splice_and_gencode.py  test_strand_correction.py  test_stringtie.py
(+1 files in other folders)
