[tool.poetry]
name = "eukan"
version = "0.2.0"
description = "Eukaryotic genome annotation pipeline"
authors = ["BFL-lab"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "eukan"}]

[tool.poetry.scripts]
eukan = "eukan.cli:cli"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click = ">=8.1"
gffutils = ">=0.12"
biopython = ">=1.83"
pandas = ">=2.0"
requests = ">=2.31"
pydantic-settings = "^2.13.1"
pyhmmer = "^0.12.0"
click-option-group = ">=0.5.6"
scipy = ">=1.11"
pysam = ">=0.23"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
ruff = "^0.15.12"
mypy = "^1.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function-call-in-default (pydantic Field default_factory style)
    "SIM117", # combine-with-statements (sometimes hurts readability)
    "UP042",  # StrEnum: switching changes str() semantics on 3.11; not worth the risk
]

[tool.ruff.lint.per-file-ignores]
# Tests routinely unpack tuples ignoring parts; SIM105 try/except/pass is
# clearer than contextlib.suppress in some test fixtures.
"tests/*" = ["B011", "RUF059", "RUF015"]
# Dev tooling: setup-then-import pattern, looser rules.
"tests/run_pipeline.py" = ["B007", "B904", "E402", "RUF005", "SIM102"]
"tests/compare_spaln_modes.py" = ["E402"]
"tests/softclip_experiment.py" = ["E402"]
# Grouped seq[i]=X assignments in test data construction.
"tests/test_splice_and_gencode.py" = ["E702"]
# SIM105: try/except/pass is clearer than contextlib.suppress in this test.
"tests/test_dbfetch.py" = ["SIM105"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = ["tests/", "scripts/"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
